# Phantom

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  IMPLEMENTATION_PLAN.md  PHANTOM_V2_DESIGN_BRIEF.md  PHANTOM_V2_FEATURE_CATALOG.md  PLAN.md  README.md  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: release.yml
3a/c5bd94377b/: metadata.json
3a/c5bd94377b/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
backend/: AGENT_REGISTRY.md  ARCHITECTURE.md  Cargo.toml
backend/config/: agents.toml
backend/container/: Dockerfile.base  Dockerfile.claude  Dockerfile.codex
backend/examples/: run_claude.rs
backend/migrations/: 0001_init.sql  0002_add_acp_session_id.sql  0003_add_agent_session_id.sql
backend/src/: cli.rs  container.rs  container_build.rs  lib.rs  models.rs  ws_bridge.rs  ws_types.rs
backend/tests/: claude_smoke.rs
docs/: mcp.md
docs/design/: docker-container-isolation.md
docs/plans/: 2026-02-07-feat-text-notes.md  2026-02-09-feat-branch-selector-open-prs.md  claude-teammate-controller.md  connections-openclaw.md
f1/eff4d8d5c8/: metadata.json
gui/: agent_chat_log.html  agent_notification.html  boot.html  command-center-preview.html  index.html  main.css  menu.html  skills-tree.html
gui/fonts/: fonts.css
gui/js/: agent_chat_log.js  agent_notification.js  application.js  automations.js  command-center-config.js  command-center.js  custom-dropdown.js  gui.js  meeting-notes.js  openclaw-connections.js  review.js  slash-commands-data.js  slash-commands.js  snow.js  task-scheduler.js  tauri-bridge.js  ws-chat.js
scripts/: dev-tauri.sh
scripts/dmg/: build-dmg.sh
src/: App.tsx  index.html  main.tsx
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json  migrated.json
src-tauri/data/: animals_az_15.txt
src-tauri/icons/: icon.icns
src-tauri/src/: amp_cli.rs  audio_capture.rs  automations.rs  calendar.rs  claude_controller_api.rs  claude_local_usage.rs  claude_usage_watcher.rs  db.rs  debug_http.rs  dictation.rs  discord_bot.rs  embedding_inference.rs  embedding_model.rs  local_asr_model.rs  local_usage.rs  logger.rs  main.rs  mcp_server.rs  meeting_notes.rs  namegen.rs  openclaw.rs  opencode_cli.rs  parakeet_model.rs  semantic_indexer.rs  semantic_search.rs  summarize.rs  transcription.rs  utils.rs  webhook.rs  whisper_model.rs  worktree.rs
src-tauri/src/claude_controller/: controller.rs  inbox.rs  mod.rs  paths.rs  process.rs  team.rs  types.rs
src-tauri/src/command_center/: github.rs  linear.rs  mod.rs  sentry.rs  types.rs
src-tauri/src/dictation/: macos.rs
src/hooks/: useTauriEvent.ts  useTauriInvoke.ts
src/lib/: constants.ts  tauri.ts  types.ts
src/pages/: placeholder.tsx  tasks.tsx
src/stores/: layout.ts  tasks.ts  theme.ts
src/styles/: globals.css  tailwind.css
todos/: 001-complete-p2-fix-short-history-fallback.md  001-complete-p2-json-extraction.md  001-complete-p2-pr-link-status-summary.md  002-complete-p2-claude-oauth-polling.md  002-complete-p2-normalize-task-id.md  003-complete-p1-oauth-watchdog.md  003-complete-p2-camelcase-navigation-event.md  004-complete-p1-claude-credentials-optin.md  004-complete-p2-skip-diff-metadata-lines.md  005-complete-p1-remove-duplicate-opencode.md  005-complete-p2-git-log-separator.md  006-complete-p1-fix-tauri-bridge-payloads.md  006-complete-p1-inbox-locking-rename-race.md  007-complete-p1-controller-poller-leaks-and-shutdown-doesnt-stop.md  007-complete-p2-add-review-center-screenshot.md  008-complete-p1-sanitize-inbox-from-and-prevent-path-traversal.md  009-complete-p2-lock-team-config-json-updates.md  010-complete-p2-harden-controller-api-auth-and-browser-compat.md  011-complete-p2-translate-teammate-structured-messages-to-ui-events.md  012-complete-p2-use-resolved-claude-binary-consistently.md  013-complete-p3-clean-up-teammate-controller-warnings-and-dead-code.md  014-complete-p2-rebase-pr-30-to-resolve-conflicts.md
(+35 files in other folders)
