[package]
name = "phantom_harness"
version = "1.0.3-alpha4"
description = "Phantom Harness Tauri app"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "devtools"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
phantom_harness_backend = { path = "../backend" }
anyhow = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "sync", "time"] }
url = "2"
dirs = "5"
reqwest = { version = "0.11", features = ["json", "blocking", "multipart", "stream"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
portable-pty = "0.8"
hyper = { version = "0.14", features = ["full"] }
tokio-stream = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
urlencoding = "2.1"
base64 = "0.22"
rand = "0.8"
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "rustls_backend"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
walkdir = "2"
glob = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
libc = "0.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2"
